--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ header {
     width: 100%;
     background-color: #f6f5f0;
     border-bottom: 1px solid #c8c8c8;
+    z-index: 9;
 }
 
 .inner {
@@ -103,8 +104,6 @@ header>.inner {
     right: 5px;
 }
 
-.main-menu {}
-
 .main-menu ul.menu {
     display: flex;
     position: absolute;
@@ -132,6 +131,7 @@ header>.inner {
     width: 100%;
     left: 0;
     display: none;
+    z-index: 7;
 }
 
 .dropdown .dropdown__main {
@@ -195,4 +195,61 @@ header>.inner {
 .badges div img{
     margin: 10px;
     border-radius: 5px;
+}
+
+/* NEWS */
+.news {
+    background-image: url(../images/visual_bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.news .inner {
+    height: 800px;
+}
+
+.news .gradual-img {
+    opacity: 0;
+}
+
+.news .title {
+    position: absolute;
+    top: 300px;
+    left: -50px;
+}
+
+.news .title input {
+    position: absolute;
+    top: 250px;
+    left: 200px;
+}
+
+.news .news__1 {
+    position: absolute;
+    top: 150px;
+    right: -50px;
+}
+
+.news .news__1 img:last-child{
+    position: absolute;
+    top: 30px;
+    right: 250px;
+}
+
+.news .news__2 {
+    position: absolute;
+    top: 250px;
+    right: 100px;
+}
+
+.news .news__2 img:last-child {
+    position: absolute;
+    top: 50px;
+    right: 270px;
+}
+
+.news .news__3 {
+    position: absolute;
+    bottom: 50px;
+    right: 350px;
 }
